WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83488
Fixed ordering of deleting CCInputHandler and LayerTreeHostImpl in layerTreeHostClosedOnImplThread
https://bugs.webkit.org/show_bug.cgi?id=83488
Summary
Fixed ordering of deleting CCInputHandler and LayerTreeHostImpl in layerTreeH...
Min Qin
Reported
2012-04-09 11:02:55 PDT
Fixed ordering of deleting CCInputHandler and LayerTreeHostImpl in layerTreeHostClosedOnImplThread
Attachments
Patch
(1.85 KB, patch)
2012-04-09 11:15 PDT
,
Min Qin
no flags
Details
Formatted Diff
Diff
Patch
(1.89 KB, patch)
2012-04-09 16:28 PDT
,
Min Qin
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Min Qin
Comment 1
2012-04-09 11:15:24 PDT
Created
attachment 136271
[details]
Patch
James Robinson
Comment 2
2012-04-09 11:18:36 PDT
Comment on
attachment 136271
[details]
Patch R=me
WebKit Review Bot
Comment 3
2012-04-09 14:42:32 PDT
Comment on
attachment 136271
[details]
Patch Rejecting
attachment 136271
[details]
from commit-queue. Failed to run "['/mnt/git/webkit-commit-queue/Tools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '-..." exit_code: 1 ERROR: /mnt/git/webkit-commit-queue/Source/WebCore/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output:
http://queues.webkit.org/results/12368393
Min Qin
Comment 4
2012-04-09 16:28:37 PDT
Created
attachment 136333
[details]
Patch
Min Qin
Comment 5
2012-04-09 16:29:56 PDT
Comment on
attachment 136333
[details]
Patch Hi, James, would you please do it again. Seems webkit is not happy with the missing "Reviewed by "
James Robinson
Comment 6
2012-04-09 16:48:57 PDT
Comment on
attachment 136333
[details]
Patch Yup, it's picky like that.
WebKit Review Bot
Comment 7
2012-04-09 21:05:52 PDT
Comment on
attachment 136333
[details]
Patch Clearing flags on attachment: 136333 Committed
r113673
: <
http://trac.webkit.org/changeset/113673
>
WebKit Review Bot
Comment 8
2012-04-09 21:05:56 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug