Fixed ordering of deleting CCInputHandler and CCLayerTreeHostImpl in layerTreeHostClosedOnImplThread https://bugs.webkit.org/show_bug.cgi?id=83488

Patch by Min Qin <qinmin@google.com> on 2012-04-09
Reviewed by James Robinson.

CCInputHandler(WebCompositorInputHandlerImpl) has a pointer to CCLayerTreeHostImpl.
So we should delete CCInputHandler earlier as otherwise that pointer could get misused after LayerTreeHostImpl is deleted.
Just fixing a potential NPE error, no behavior change.

* platform/graphics/chromium/cc/CCThreadProxy.cpp:
(WebCore::CCThreadProxy::layerTreeHostClosedOnImplThread):

Canonical link: https://commits.webkit.org/100983@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@113673 268f45cc-cd09-0410-ab3c-d52691b4dbfc